zipcode reentry with geocoder based state selection, blurring to prevent messup with the map before entering zipcode

--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -389,6 +389,12 @@ color scheme. See readme.md*/
   padding-right: 10px;
 }
 
+.blurtop {
+  filter: blur(3px);
+  z-index: 0;
+  pointer-events: none;
+}
+
 .map-demo {
   /*  position: absolute; */
   top: 100px;
